[gd_scene load_steps=5 format=3 uid="uid://cxwyhyyqufru4"]

[ext_resource type="Script" path="res://scenes/UI/board/board_elements/element_base.gd" id="1_4ifnd"]
[ext_resource type="Theme" uid="uid://ch43e5d5tnkt5" path="res://settings/board_element_theme.tres" id="2_0w3jl"]

[sub_resource type="Gradient" id="Gradient_y8ieu"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_adj55"]
gradient = SubResource("Gradient_y8ieu")
width = 28
height = 28

[node name="ElementBase" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 28.0
theme = ExtResource("2_0w3jl")
script = ExtResource("1_4ifnd")

[node name="Stack" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Stack"]
z_index = 10
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PointTexture" type="TextureRect" parent="Stack/Header"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
texture = SubResource("GradientTexture2D_adj55")

[node name="ElementLabel" type="Label" parent="Stack/Header"]
custom_minimum_size = Vector2(200, 28)
layout_mode = 2
size_flags_horizontal = 3
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="Stack/Header"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
text = "X"

[node name="Content" type="HBoxContainer" parent="Stack"]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Stack/Header/DeleteButton" to="." method="_on_delete_button_pressed"]
